# LearningGameEngines

./: .gitmodules  CMakeLists.txt  README.md  uiConfig.ini
assets/scenes/: Example.engine  PinkCube.engine  boxWorld.engine  steven.engine
assets/shaders/: FlatColor.glsl  Renderer2D-Circle.glsl  Renderer2D-Quad.glsl  Texture.glsl
cmake/: config.cmake
editor/: CMakeLists.txt  SourceList.cmake
editor/src/: EditorApp.cpp  EditorLayer.cpp  EditorLayer.h
editor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
engine/: CMakeLists.txt  SourceList.cmake
engine/src/: Engine.h  EnginePch.h
engine/src/Engine/Core/: Application.cpp  Application.h  Base.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  TimeStep.h  Timer.h  UUID.cpp  UUID.h  Window.h
engine/src/Engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
engine/src/Engine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
engine/src/Engine/Math/: Math.cpp  Math.h
engine/src/Engine/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
engine/src/Engine/Scene/: Components.cpp  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.cpp  ScriptableEntity.h
engine/src/Engine/Utils/: PlatformUtils.h
engine/src/engine/: Application.cpp  Application.h  Assert.h  Base.h  EnginePch.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
engine/src/engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
engine/src/engine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
sandbox/: CMakeLists.txt  SourceList.cmake  uiConfig.ini
sandbox/assets/shaders/: Texture.glsl
sandbox/src/: SandboxApp.cpp
sandbox/src/Layers/: Example2D.cpp  Example2D.h  Example2DLayer.cpp  Example2DLayer.h  ExampleLayer.cpp  ExampleLayer.h  ParticleSystemLayer.cpp  ParticleSystemLayer.h  TileMapExampleLayer.cpp  TileMapExampleLayer.h
sandbox/src/Particle System/: ParticleSystem.cpp  ParticleSystem.h  Random.cpp  Random.h
